fix posts, post titles no longer overlap

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -359,6 +359,7 @@ tbody tr:nth-child(odd) th {
 .list {
   &-post-title {
    margin-bottom: .25rem;
+   line-height: 45px;
 
     a {
       padding: .3rem;
